[package]
name = "philiprehberger-str-utils"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "String manipulation utilities — truncation, case conversion, padding, and whitespace operations"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-str-utils"
keywords = ["string", "text", "case", "truncate", "utility"]
categories = ["text-processing", "no-std::no-alloc"]

[dependencies]
unicode-width = "0.2"
